# crisp-game-lib-portable-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml  build_vcpkg.yml  build_windows.yml
convert_prompt/: prompt.txt
convert_prompt/knowledge/: gamePinClimb.c  gameThunder.c
meta/cgl files/: ANT LION.cgl  BREED C.cgl  BS FISH.cgl  COLOR ROLL.cgl  GRAPPLING H.cgl  HEXMIN.cgl  IN TOW.cgl  LADDER DROP.cgl  REFLECTOR.cgl
meta/cgl files/Crisp Game Library Portable/: ACCEL B.cgl  B BLAST.cgl  B WALLS.cgl  BALL TOUR.cgl  BALLS BOMBS.cgl  BOMB UP.cgl  C NODES.cgl  CARD Q.cgl  CAST N.cgl  CIRCLE W.cgl  CROSS LINE.cgl  FROOOOG.cgl  PAKU PAKU.cgl  PIN CLIMB.cgl  R WHEEL.cgl  SURVIVOR.cgl  TIMBER TEST.cgl  TWO FACED.cgl
metadata/cgl files/: AERIAL BAR.cgl  B CANNON.cgl  BAROLL.cgl  C TOWER.cgl  CATE P.cgl  CHARGE BEAM.cgl  COUNTER B.cgl  D FIGHT.cgl  D LASER.cgl  DARK CAVE.cgl  DESCENT S.cgl  DIVARR.cgl  FRACAVE.cgl
metadata/trimuismartpro/: config.json  launch.sh
src/cglpPlaydate/: CMakeLists.txt
src/cglpPlaydate/Source/: pdxinfo
src/cglpPlaydate/src/: cglpPlaydate.c  syscalls.c
src/cglpSDL1/: Makefile  cglpSDL1.c  cglpSDL1.h  cglpsSDL1.c
src/cglpSDL1_funkey/: Cglpsdl1.funkey-s.desktop  Makefile  cglp.c  cglpSDL1.c  cglpSDL1.h  funkey.mk  gameBallTour.c  gameFracave.c  gameFroooog.c  gameRWheel.c  package.sh  trig_normalization.h  vector.c
src/cglpSDL2/: CInput.c  CInput.h  CMakeLists.txt  Makefile  cglp.c  cglp.h  cglpSDL2.c  cglpSDL2.h
src/cglpSDL3/: CInput.c  CInput.h  CMakeLists.txt  cglpSDL3.c  cglpSDL3.h
src/games/: gameAccelB.c  gameAeralBar.c  gameAntLion.c  gameBBlast.c  gameBCannon.c  gameBSFish.c  gameBWalls.c  gameBalance.c  gameBallTour.c  gameBallsBombs.c  gameBamboo.c  gameBaroll.c  gameBombUp.c  gameBreedC.c  gameCNodes.c  gameCTower.c  gameCardQ.c  gameCastN.c  gameCatapult.c  gameCateP.c  gameChargeBeam.c  gameCircleW.c  gameColorRoll.c  gameCounterB.c  gameCrossLine.c  gameDFight.c  gameDLaser.c  gameDarkCave.c  gameDescents.c  gameDivarr.c  gameFracave.c  gameFroooog.c  gameGrapplingH.c  gameHexmin.c  gameInTow.c  gameLadderDrop.c  gamePakuPaku.c  gameRWheel.c  gameReflector.c  gameSurvivor.c  (+3 more)
src/lib/: cglp.c  cglp.h  menu.c  menu.h  menuGameList.c
